--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "authtdd",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.16.4",
+    "pg": "^7.9.0",
+    "sequelize": "^5.2.12"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.4.0"
+  }
 }
