--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "test": "jest"
+  },
   "dependencies": {
     "express": "^4.16.4",
     "pg": "^7.9.0",
     "sequelize": "^5.2.12"
   },
   "devDependencies": {
+    "jest": "^24.7.1",
+    "nodemon": "^1.18.11",
     "sequelize-cli": "^5.4.0"
   }
 }
