--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js --ignore __tests__",
-    "test": "jest"
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "pg": "^7.9.0",
     "sequelize": "^5.2.12"
@@ -16,6 +17,7 @@
   "devDependencies": {
     "jest": "^24.7.1",
     "nodemon": "^1.18.11",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-cli": "^5.4.0",
+    "sqlite3": "^4.0.6"
   }
 }
