--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jest": "^24.7.1",
     "nodemon": "^1.18.11",
     "sequelize-cli": "^5.4.0",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "win-node-env": "^0.4.0"
   }
 }
