--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.18.11",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6",
+    "supertest": "^4.0.2",
     "win-node-env": "^0.4.0"
   }
 }
