--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.9.0",
     "sequelize": "^5.2.12"
